Fixed security bugs regarding service making, made fundamentals for appointmentBooking